--- a/app/client/templates/dashboard/dashboard.html
+++ b/app/client/templates/dashboard/dashboard.html
@@ -5,11 +5,11 @@
                 <div class="card-content white-text">
                     <span class="card-title center-align">Quick Booking</span>
                     <div class="card-panel">
-                        {{> tempForm}}
+                        
                     </div>
                 </div>
                 <div class="card-action center-align">
-                    <a href="#" class="waves-effect waves-light btn">This is a link</a>
+                    <a href="#" class="waves-effect waves-light btn">Add</a>
                     <a href="#" class="waves-effect waves-light btn">This is a link</a>
                 </div>
             </div>
@@ -18,11 +18,12 @@
             <div class="card blue-grey darken-1 hoverable">
                 <div class="card-content white-text">
                     <span class="card-title center-align">Quick Add Client</span>
-                    <div class="card-panel">
+                    <!-- <div class="card-panel">
                        {{> quickForm collection="Clients" id="insertClientForm" type="insert"}}
-                    </div>
+                    </div> -->
                 </div>
                 <div class="card-action center-align">
+                 <a href="#" class="waves-effect waves-light btn">Add</a>
                 </div>
             </div>
         </div>
