--- a/app/client/templates/dashboard/client_list/client_list.css
+++ b/app/client/templates/dashboard/client_list/client_list.css
@@ -4,3 +4,37 @@
 .client-list {
 	margin: 0 auto;
 }
+
+.pagination li.current {
+    background-color: #ee6e73;
+}
+
+.pagination li a {
+    color: #444;
+    display: inline-block;
+    font-size: 1.2rem;
+    padding: 0 10px;
+    line-height: 30px;
+}
+.pagination li.page.disabled {
+    cursor: default;
+    color: #999;
+ }
+
+.pagination li.page {
+	position: relative;
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    vertical-align: middle;
+    z-index: 1;
+}
+.collapsible-header {
+
+	padding: 0 4em;
+}
